--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -10,94 +10,183 @@
 set(gammaray_srcs
     ${CMAKE_SOURCE_DIR}/3rdparty/qt/resourcemodel.cpp
     abstractbindingprovider.cpp
+    abstractbindingprovider.h
     aggregatedpropertymodel.cpp
-    bindingaggregator.cpp
-    bindingnode.cpp
-    metaobject.cpp
-    metaobjectregistry.cpp
-    metaobjectrepository.cpp
-    metaproperty.cpp
-    probe.cpp
-    probeguard.cpp
-    probesettings.cpp
-    probecontroller.cpp
-    objectlistmodel.cpp
-    objectclassinfomodel.cpp
-    objectmethodmodel.cpp
-    objectenummodel.cpp
-    objecttreemodel.cpp
-    objecttypefilterproxymodel.cpp
-    problemcollector.cpp
-    methodargumentmodel.cpp
-    multisignalmapper.cpp
-    signalspycallbackset.cpp
-    singlecolumnobjectproxymodel.cpp
-    stacktracemodel.cpp
-    toolfactory.cpp
-    toolmanager.cpp
-    toolpluginmodel.cpp
-    toolpluginerrormodel.cpp
-    propertycontroller.cpp
-    propertycontrollerextension.cpp
-    proxytoolfactory.cpp
-    util.cpp
-    varianthandler.cpp
-    objectdataprovider.cpp
-    attributemodel.cpp
-    qmetaobjectvalidator.cpp
-    enumrepositoryserver.cpp
-    enumutil.cpp
-    execution.cpp
-    classesiconsrepositoryserver.cpp
-    favoriteobject.cpp
-    propertyadaptor.cpp
-    propertyaggregator.cpp
-    propertydata.cpp
-    propertyfilter.cpp
-    dynamicpropertyadaptor.cpp
-    qmetapropertyadaptor.cpp
-    metapropertyadaptor.cpp
+    aggregatedpropertymodel.h
     associativepropertyadaptor.cpp
-    sequentialpropertyadaptor.cpp
-    objectinstance.cpp
-    propertyadaptorfactory.cpp
+    associativepropertyadaptor.h
+    attributemodel.cpp
+    attributemodel.h
+    bindingaggregator.cpp
+    bindingaggregator.h
+    bindingnode.cpp
+    bindingnode.h
+    classesiconsrepositoryserver.cpp
+    classesiconsrepositoryserver.h
+    dynamicpropertyadaptor.cpp
+    dynamicpropertyadaptor.h
+    enumrepositoryserver.cpp
+    enumrepositoryserver.h
+    enumutil.cpp
+    enumutil.h
+    execution.cpp
+    execution.h
+    favoriteobject.cpp
+    favoriteobject.h
     jsonpropertyadaptor.cpp
-    paintbuffer.cpp
-    paintbuffermodel.cpp
+    jsonpropertyadaptor.h
+    metaobject.cpp
+    metaobject.h
+    metaobjectregistry.cpp
+    metaobjectregistry.h
+    metaobjectrepository.cpp
+    metaobjectrepository.h
+    metaproperty.cpp
+    metaproperty.h
+    metapropertyadaptor.cpp
+    metapropertyadaptor.h
+    methodargumentmodel.cpp
+    methodargumentmodel.h
+    multisignalmapper.cpp
+    multisignalmapper.h
+    objectclassinfomodel.cpp
+    objectclassinfomodel.h
+    objectdataprovider.cpp
+    objectdataprovider.h
+    objectenummodel.cpp
+    objectenummodel.h
+    objectinstance.cpp
+    objectinstance.h
+    objectlistmodel.cpp
+    objectlistmodel.h
+    objectmethodmodel.cpp
+    objectmethodmodel.h
+    objecttreemodel.cpp
+    objecttreemodel.h
+    objecttypefilterproxymodel.cpp
+    objecttypefilterproxymodel.h
     paintanalyzer.cpp
+    paintanalyzer.h
+    paintbuffer.cpp
+    paintbuffer.h
+    paintbuffermodel.cpp
+    paintbuffermodel.h
     painterprofilingreplayer.cpp
-    remoteviewserver.cpp
-    tools/metatypebrowser/metatypesmodel.cpp
-    tools/messagehandler/messagehandler.cpp
-    tools/messagehandler/messagemodel.cpp
-    tools/metaobjectbrowser/metaobjectbrowser.cpp
-    tools/metaobjectbrowser/metaobjecttreemodel.cpp
-    tools/metatypebrowser/metatypebrowser.cpp
-    tools/objectinspector/objectinspector.cpp
-    tools/objectinspector/propertiesextension.cpp
-    tools/objectinspector/methodsextension.cpp
-    tools/objectinspector/connectionsextension.cpp
-    tools/objectinspector/abstractconnectionsmodel.cpp
-    tools/objectinspector/inboundconnectionsmodel.cpp
-    tools/objectinspector/outboundconnectionsmodel.cpp
-    tools/objectinspector/enumsextension.cpp
-    tools/objectinspector/classinfoextension.cpp
-    tools/objectinspector/applicationattributeextension.cpp
-    tools/objectinspector/bindingextension.cpp
-    tools/objectinspector/bindingmodel.cpp
-    tools/objectinspector/stacktraceextension.cpp
-    tools/problemreporter/availablecheckersmodel.cpp
-    tools/problemreporter/problemmodel.cpp
-    tools/problemreporter/problemreporter.cpp
-    tools/resourcebrowser/resourcebrowser.cpp
-    tools/resourcebrowser/resourcefiltermodel.cpp
-    remote/server.cpp
-    remote/remotemodelserver.cpp
-    remote/selectionmodelserver.cpp
-    remote/serverdevice.cpp
-    remote/tcpserverdevice.cpp
+    painterprofilingreplayer.h
+    probe.cpp
+    probe.h
+    probecontroller.cpp
+    probecontroller.h
+    probeguard.cpp
+    probeguard.h
+    probesettings.cpp
+    probesettings.h
+    problemcollector.cpp
+    problemcollector.h
+    propertyadaptor.cpp
+    propertyadaptor.h
+    propertyadaptorfactory.cpp
+    propertyadaptorfactory.h
+    propertyaggregator.cpp
+    propertyaggregator.h
+    propertycontroller.cpp
+    propertycontroller.h
+    propertycontrollerextension.cpp
+    propertycontrollerextension.h
+    propertydata.cpp
+    propertydata.h
+    propertyfilter.cpp
+    propertyfilter.h
+    proxytoolfactory.cpp
+    proxytoolfactory.h
+    qmetaobjectvalidator.cpp
+    qmetaobjectvalidator.h
+    qmetapropertyadaptor.cpp
+    qmetapropertyadaptor.h
     remote/localserverdevice.cpp
+    remote/localserverdevice.h
+    remote/remotemodelserver.cpp
+    remote/remotemodelserver.h
+    remote/selectionmodelserver.cpp
+    remote/selectionmodelserver.h
+    remote/server.cpp
+    remote/server.h
+    remote/serverdevice.cpp
+    remote/serverdevice.h
     remote/serverproxymodel.cpp
+    remote/serverproxymodel.h
+    remote/tcpserverdevice.cpp
+    remote/tcpserverdevice.h
+    remoteviewserver.cpp
+    remoteviewserver.h
+    sequentialpropertyadaptor.cpp
+    sequentialpropertyadaptor.h
+    signalspycallbackset.cpp
+    signalspycallbackset.h
+    singlecolumnobjectproxymodel.cpp
+    singlecolumnobjectproxymodel.h
+    stacktracemodel.cpp
+    stacktracemodel.h
+    toolfactory.cpp
+    toolfactory.h
+    toolmanager.cpp
+    toolmanager.h
+    toolpluginerrormodel.cpp
+    toolpluginerrormodel.h
+    toolpluginmodel.cpp
+    toolpluginmodel.h
+    tools/messagehandler/messagehandler.cpp
+    tools/messagehandler/messagehandler.h
+    tools/messagehandler/messagemodel.cpp
+    tools/messagehandler/messagemodel.h
+    tools/metaobjectbrowser/metaobjectbrowser.cpp
+    tools/metaobjectbrowser/metaobjectbrowser.h
+    tools/metaobjectbrowser/metaobjecttreemodel.cpp
+    tools/metaobjectbrowser/metaobjecttreemodel.h
+    tools/metatypebrowser/metatypebrowser.cpp
+    tools/metatypebrowser/metatypebrowser.h
+    tools/metatypebrowser/metatypesmodel.cpp
+    tools/metatypebrowser/metatypesmodel.h
+    tools/objectinspector/abstractconnectionsmodel.cpp
+    tools/objectinspector/abstractconnectionsmodel.h
+    tools/objectinspector/applicationattributeextension.cpp
+    tools/objectinspector/applicationattributeextension.h
+    tools/objectinspector/bindingextension.cpp
+    tools/objectinspector/bindingextension.h
+    tools/objectinspector/bindingmodel.cpp
+    tools/objectinspector/bindingmodel.h
+    tools/objectinspector/classinfoextension.cpp
+    tools/objectinspector/classinfoextension.h
+    tools/objectinspector/connectionsextension.cpp
+    tools/objectinspector/connectionsextension.h
+    tools/objectinspector/enumsextension.cpp
+    tools/objectinspector/enumsextension.h
+    tools/objectinspector/inboundconnectionsmodel.cpp
+    tools/objectinspector/inboundconnectionsmodel.h
+    tools/objectinspector/methodsextension.cpp
+    tools/objectinspector/methodsextension.h
+    tools/objectinspector/objectinspector.cpp
+    tools/objectinspector/objectinspector.h
+    tools/objectinspector/outboundconnectionsmodel.cpp
+    tools/objectinspector/outboundconnectionsmodel.h
+    tools/objectinspector/propertiesextension.cpp
+    tools/objectinspector/propertiesextension.h
+    tools/objectinspector/stacktraceextension.cpp
+    tools/objectinspector/stacktraceextension.h
+    tools/problemreporter/availablecheckersmodel.cpp
+    tools/problemreporter/availablecheckersmodel.h
+    tools/problemreporter/problemmodel.cpp
+    tools/problemreporter/problemmodel.h
+    tools/problemreporter/problemreporter.cpp
+    tools/problemreporter/problemreporter.h
+    tools/resourcebrowser/resourcebrowser.cpp
+    tools/resourcebrowser/resourcebrowser.h
+    tools/resourcebrowser/resourcefiltermodel.cpp
+    tools/resourcebrowser/resourcefiltermodel.h
+    util.cpp
+    util.h
+    varianthandler.cpp
+    varianthandler.h
     ${CMAKE_SOURCE_DIR}/resources/gammaray.qrc
 )
 
