--- a/plugins/eventmonitor/CMakeLists.txt
+++ b/plugins/eventmonitor/CMakeLists.txt
@@ -11,11 +11,16 @@
 if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
 
     set(gammaray_eventmonitor_plugin_srcs
-        eventmonitor.cpp
         eventmodel.cpp
+        eventmodel.h
+        eventmonitor.cpp
+        eventmonitor.h
         eventmonitorinterface.cpp
-        eventtypemodel.cpp
+        eventmonitorinterface.h
         eventtypefilter.cpp
+        eventtypefilter.h
+        eventtypemodel.cpp
+        eventtypemodel.h
     )
 
     gammaray_add_plugin(
@@ -31,8 +36,15 @@ endif()
 
 # ui part
 if(GAMMARAY_BUILD_UI)
-    set(gammaray_eventmonitor_ui_plugin_srcs eventmonitorwidget.cpp eventmonitorinterface.cpp eventmonitorclient.cpp
-                                             eventtypeclientproxymodel.cpp
+    set(gammaray_eventmonitor_ui_plugin_srcs
+        eventmonitorclient.cpp
+        eventmonitorclient.h
+        eventmonitorinterface.cpp
+        eventmonitorinterface.h
+        eventmonitorwidget.cpp
+        eventmonitorwidget.h
+        eventtypeclientproxymodel.cpp
+        eventtypeclientproxymodel.h
     )
 
     gammaray_add_plugin(
