--- a/plugins/fontbrowser/CMakeLists.txt
+++ b/plugins/fontbrowser/CMakeLists.txt
@@ -11,10 +11,15 @@
 if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
     set(gammaray_fontbrowser_plugin_srcs
         fontbrowser.cpp
+        fontbrowser.h
         fontbrowserinterface.cpp
-        fontmodel.cpp
-        fontdatabasemodel.cpp
+        fontbrowserinterface.h
         fontbrowserserver.cpp
+        fontbrowserserver.h
+        fontdatabasemodel.cpp
+        fontdatabasemodel.h
+        fontmodel.cpp
+        fontmodel.h
     )
 
     gammaray_add_plugin(
@@ -32,7 +37,14 @@ endif()
 # ui part
 if(GAMMARAY_BUILD_UI)
 
-    set(gammaray_fontbrowser_plugin_ui_srcs fontbrowserwidget.cpp fontbrowserinterface.cpp fontbrowserclient.cpp)
+    set(gammaray_fontbrowser_plugin_ui_srcs
+        fontbrowserclient.cpp
+        fontbrowserclient.h
+        fontbrowserinterface.cpp
+        fontbrowserinterface.h
+        fontbrowserwidget.cpp
+        fontbrowserwidget.h
+    )
 
     gammaray_add_plugin(
         gammaray_fontbrowser_ui_plugin
