--- a/plugins/network/CMakeLists.txt
+++ b/plugins/network/CMakeLists.txt
@@ -10,15 +10,21 @@
 # probe plugin
 if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
     set(gammaray_network_srcs
-        networksupport.cpp
-        networksupportinterface.cpp
-        networkinterfacemodel.cpp
-        networkreplymodel.cpp
         cookies/cookieextension.cpp
+        cookies/cookieextension.h
         cookies/cookiejarmodel.cpp
+        cookies/cookiejarmodel.h
+        networkinterfacemodel.cpp
+        networkinterfacemodel.h
+        networkreplymodel.cpp
+        networkreplymodel.h
+        networksupport.cpp
+        networksupport.h
+        networksupportinterface.cpp
+        networksupportinterface.h
     )
     if(TARGET Qt5::Network)
-        list(APPEND gammaray_network_srcs networkconfigurationmodel.cpp)
+        list(APPEND gammaray_network_srcs networkconfigurationmodel.cpp networkconfigurationmodel.h)
     endif()
     gammaray_add_plugin(
         gammaray_network
@@ -34,15 +40,24 @@ endif()
 # ui plugin
 if(GAMMARAY_BUILD_UI)
     set(gammaray_network_ui_srcs
-        networkwidget.cpp
-        networkinterfacewidget.cpp
-        networkconfigurationwidget.cpp
         clientnetworkconfigurationmodel.cpp
-        networkreplywidget.cpp
+        clientnetworkconfigurationmodel.h
         clientnetworkreplymodel.cpp
-        networksupportinterface.cpp
-        networksupportclient.cpp
+        clientnetworkreplymodel.h
         cookies/cookietab.cpp
+        cookies/cookietab.h
+        networkconfigurationwidget.cpp
+        networkconfigurationwidget.h
+        networkinterfacewidget.cpp
+        networkinterfacewidget.h
+        networkreplywidget.cpp
+        networkreplywidget.h
+        networksupportclient.cpp
+        networksupportclient.h
+        networksupportinterface.cpp
+        networksupportinterface.h
+        networkwidget.cpp
+        networkwidget.h
     )
     gammaray_add_plugin(
         gammaray_network_ui
