--- a/plugins/openglsupport/CMakeLists.txt
+++ b/plugins/openglsupport/CMakeLists.txt
@@ -15,6 +15,7 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
         gammaray_openglsupport.json
         SOURCES
         openglsupport.cpp
+        openglsupport.h
     )
     target_link_libraries(gammaray_openglsupport gammaray_core Qt::Gui)
     if(TARGET Qt6::OpenGL)
