--- a/plugins/sceneinspector/CMakeLists.txt
+++ b/plugins/sceneinspector/CMakeLists.txt
@@ -9,8 +9,15 @@
 
 # probe part
 if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
-    set(gammaray_sceneinspector_plugin_srcs sceneinspector.cpp scenemodel.cpp sceneinspectorinterface.cpp
-                                            paintanalyzerextension.cpp
+    set(gammaray_sceneinspector_plugin_srcs
+        paintanalyzerextension.cpp
+        paintanalyzerextension.h
+        sceneinspector.cpp
+        sceneinspector.h
+        sceneinspectorinterface.cpp
+        sceneinspectorinterface.h
+        scenemodel.cpp
+        scenemodel.h
     )
 
     gammaray_add_plugin(
@@ -33,11 +40,16 @@ endif()
 # ui part
 if(GAMMARAY_BUILD_UI)
     set(gammaray_sceneinspector_ui_plugin_srcs
-        sceneinspectorwidget.cpp
-        graphicsview.cpp
         graphicssceneview.cpp
-        sceneinspectorinterface.cpp
+        graphicssceneview.h
+        graphicsview.cpp
+        graphicsview.h
         sceneinspectorclient.cpp
+        sceneinspectorclient.h
+        sceneinspectorinterface.cpp
+        sceneinspectorinterface.h
+        sceneinspectorwidget.cpp
+        sceneinspectorwidget.h
     )
 
     gammaray_add_plugin(
