--- a/plugins/translatorinspector/CMakeLists.txt
+++ b/plugins/translatorinspector/CMakeLists.txt
@@ -15,9 +15,13 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
         gammaray_translatorinspector.json
         SOURCES
         translatorinspector.cpp
+        translatorinspector.h
         translatorinspectorinterface.cpp
-        translatorwrapper.cpp
+        translatorinspectorinterface.h
         translatorsmodel.cpp
+        translatorsmodel.h
+        translatorwrapper.cpp
+        translatorwrapper.h
     )
     target_link_libraries(gammaray_translatorinspector gammaray_core Qt::Core Qt::CorePrivate)
     set_target_properties(gammaray_translatorinspector PROPERTIES DISABLE_PRECOMPILE_HEADERS ON)
@@ -30,9 +34,12 @@ if(GAMMARAY_BUILD_UI)
         JSON
         gammaray_translatorinspector.json
         SOURCES
-        translatorinspectorwidget.cpp
         translatorinspectorinterface.cpp
+        translatorinspectorinterface.h
+        translatorinspectorwidget.cpp
+        translatorinspectorwidget.h
         translatorwrapperproxy.cpp
+        translatorwrapperproxy.h
     )
     target_link_libraries(gammaray_translatorinspector_ui gammaray_ui)
 endif()
