--- a/plugins/webinspector/CMakeLists.txt
+++ b/plugins/webinspector/CMakeLists.txt
@@ -9,7 +9,7 @@
 
 # probe part
 if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
-    set(gammaray_webinspector_plugin_srcs webinspector.cpp webviewmodel.cpp)
+    set(gammaray_webinspector_plugin_srcs webinspector.cpp webinspector.h webviewmodel.cpp webviewmodel.h)
 
     gammaray_add_plugin(
         gammaray_webinspector_plugin
@@ -26,7 +26,7 @@ endif()
 
 # ui part
 if(GAMMARAY_BUILD_UI AND TARGET Qt::WebEngineWidgets)
-    set(gammaray_webinspector_ui_plugin_srcs webinspectorwidget.cpp)
+    set(gammaray_webinspector_ui_plugin_srcs webinspectorwidget.cpp webinspectorwidget.h)
 
     gammaray_add_plugin(
         gammaray_webinspector_ui_plugin
