--- a/plugins/widgetinspector/CMakeLists.txt
+++ b/plugins/widgetinspector/CMakeLists.txt
@@ -12,14 +12,22 @@
 # probe plugin
 if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
     set(gammaray_widgetinspector_plugin_srcs
-        widgetinspector.cpp
-        widgetinspectorinterface.cpp
-        widgetinspectorserver.cpp
         overlaywidget.cpp
-        widgettreemodel.cpp
-        widgetpaintanalyzerextension.cpp
-        widget3dmodel.cpp
+        overlaywidget.h
         waextension/widgetattributeextension.cpp
+        waextension/widgetattributeextension.h
+        widget3dmodel.cpp
+        widget3dmodel.h
+        widgetinspector.cpp
+        widgetinspector.h
+        widgetinspectorinterface.cpp
+        widgetinspectorinterface.h
+        widgetinspectorserver.cpp
+        widgetinspectorserver.h
+        widgetpaintanalyzerextension.cpp
+        widgetpaintanalyzerextension.h
+        widgettreemodel.cpp
+        widgettreemodel.h
     )
 
     gammaray_add_plugin(
@@ -42,7 +50,7 @@ endif()
 # probe export actions
 add_library(
     gammaray_widget_export_actions SHARED
-    uiextractor.cpp widgetinspector_export_actions.cpp
+    uiextractor.cpp uiextractor.h widgetinspector_export_actions.cpp
 )
 
 set_target_properties(
