--- a/plugins/bluetooth/CMakeLists.txt
+++ b/plugins/bluetooth/CMakeLists.txt
@@ -15,6 +15,7 @@ if(NOT GAMMARAY_CLIENT_ONLY_BUILD)
         gammaray_bluetooth.json
         SOURCES
         bluetooth.cpp
+        bluetooth.h
     )
     target_link_libraries(gammaray_bluetooth gammaray_core Qt::Bluetooth)
     set_target_properties(gammaray_bluetooth PROPERTIES DISABLE_PRECOMPILE_HEADERS ON)
